add some debug, and remove some comments

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -132,8 +132,7 @@ jobs:
             exit 1
           fi
           echo "SLURM_JOB_ID=${SLURM_JOB_ID}" >> $GITHUB_ENV
-          
-          # Get the allocated node name
+
           SLURM_NODE="$(squeue --noheader -o '%N' -j "${SLURM_JOB_ID}")"
           echo "Allocated node: ${SLURM_NODE}"
 
@@ -145,24 +144,24 @@ jobs:
           
           # For initial container start: specify image to create/extract the container
           SRUN_INIT="--container-image=/mnt/data/images/genesis-v${GENESIS_IMAGE_VER}.sqsh ${SRUN_CONTAINER_OPTS} --export=NVIDIA_DRIVER_CAPABILITIES=all"
-          
-          # For subsequent commands: use container name (no need to specify image again)
+
+          # For subsequent commands: use container name
           SRUN_COMMON_BARE="--jobid=${SLURM_JOB_ID} ${SRUN_CONTAINER_OPTS} --export=NVIDIA_DRIVER_CAPABILITIES=all,BASH_ENV=/root/.bashrc,HF_TOKEN,WANDB_API_KEY,GS_ENABLE_NDARRAY=${GS_ENABLE_NDARRAY}"
           echo "SRUN_COMMON_BARE=${SRUN_COMMON_BARE}" >> "$GITHUB_ENV"
 
           SRUN_COMMON="--overlap ${SRUN_COMMON_BARE}"
           echo "SRUN_COMMON=${SRUN_COMMON}" >> "$GITHUB_ENV"
 
-          # Start the container once (with image) and keep it alive
+          # Start the container and keep it alive
           srun --jobid=${SLURM_JOB_ID} ${SRUN_INIT} sleep "${TIMEOUT_MINUTES}m" &
           echo "BASE_SRUN_PID=$!" >> $GITHUB_ENV
           BASE_SRUN_PID=$!
-          
+
           # Wait for container extraction/initialization to complete
           # The srun process will only continue once the container is fully extracted
           echo "Waiting for container extraction to complete..."
           sleep 10  # Give it a moment to start
-          
+
           # Wait for the background srun to actually start running (not just extracting)
           for i in $(seq 1 60); do
             # Check if the background srun process is still alive
@@ -171,13 +170,13 @@ jobs:
               wait "${BASE_SRUN_PID}" || true  # Show exit code
               exit 1
             fi
-            
+
             # Check if container is running by looking for the sleep process in the job
             if srun --jobid=${SLURM_JOB_ID} --overlap ps aux 2>/dev/null | grep -q "sleep ${TIMEOUT_MINUTES}m"; then
               echo "Container is running"
               break
             fi
-            
+
             if [ $i -eq 60 ]; then
               echo "ERROR: Container failed to become ready after 60 attempts" >&2
               exit 1
