--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -150,7 +150,7 @@ jobs:
         run: |
           srun ${SRUN_COMMON} bash -e -s <<'EOF'
             source /venv/bin/activate
-            pytest --print -x -m "benchmarks" ./tests
+            pytest --mem-monitoring-filepath mem_results_${SLURM_JOB_NAME}.txt --print -x -m "benchmarks" ./tests
             cat speed_test*.txt > "/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt"
           EOF
 
@@ -162,6 +162,8 @@ jobs:
           fi
       - name: Display benchmark stats
         run: |
+          ls -lh mem_results_*.txt
+          cat mem_results_*.txt
           cat "/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt"
       - name: Upload benchmark stats as artifact
         uses: actions/upload-artifact@v4
