--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -148,6 +148,10 @@ jobs:
 
       - name: Run benchmarks
         run: |
+          if [[ -d logs ]]; then {
+            rm -rf logs
+          } fi
+          mkdir logs
           srun ${SRUN_COMMON} bash -e -s <<'EOF'
             source /venv/bin/activate
             pytest --mem-monitoring-filepath mem_results_${SLURM_JOB_NAME}.txt --print -x -m "benchmarks" ./tests
