--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -154,7 +154,8 @@ jobs:
           mkdir logs
           srun ${SRUN_COMMON} bash -e -s <<'EOF'
             source /venv/bin/activate
-            pytest --mem-monitoring-filepath mem_results_${SLURM_JOB_NAME}.txt --print -x -m "benchmarks" ./tests
+            pytest --mem-monitoring-filepath "/mnt/data/artifacts/mem_test_${SLURM_JOB_NAME}.csv" \
+                   --print -x -m "benchmarks" ./tests
             cat speed_test*.txt > "/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt"
           EOF
           ls -lh logs/
