--- a/.github/workflows/alarm.yml
+++ b/.github/workflows/alarm.yml
@@ -28,8 +28,8 @@ jobs:
         run: |
           python -m pip install --quiet --upgrade wandb frozendict
 
-      - name: Download artifacts from triggering run
-        id: dl
+      - name: Download speed artifacts from triggering run
+        id: dl_speed
         uses: actions/download-artifact@v4
         with:
           pattern: speed-test-*
@@ -37,12 +37,27 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path: ./artifacts
 
-      - name: Show downloaded files
-        run: |
-          echo "Downloaded into ${{ steps.dl.outputs.download-path }}"
-          ls -la ${{ steps.dl.outputs.download-path }} || true
-          (command -v tree >/dev/null && tree -a ${{ steps.dl.outputs.download-path }}) || true
+      - name: Download mem artifacts from triggering run
+        id: dl_mem
+        uses: actions/download-artifact@v4
+        with:
+          pattern: mem-test-*
+          run-id: ${{ github.event.workflow_run.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path: ./artifacts
 
+      - name: Show downloaded speed files
+        run: |
+          echo "Downloaded into ${{ steps.dl_speed.outputs.download-path }}"
+          ls -la ${{ steps.dl_speed.outputs.download-path }} || true
+          (command -v tree >/dev/null && tree -a ${{ steps.dl_speed.outputs.download-path }}) || true
+
+      - name: Show downloaded mem files
+        run: |
+          echo "Downloaded into ${{ steps.dl_mem.outputs.download-path }}"
+          ls -la ${{ steps.dl_mem.outputs.download-path }} || true
+          (command -v tree >/dev/null && tree -a ${{ steps.dl_mem.outputs.download-path }}) || true
+  
       - name: Check regressions + build outputs
         id: analyze
         env:
@@ -60,10 +75,12 @@ jobs:
           COMPILE_REGRESSION_TOLERANCE_PCT: 16
 
           # Input/Output paths
-          ARTIFACTS_DIR: ${{ steps.dl.outputs.download-path }}
+          SPEED_ARTIFACTS_DIR: ${{ steps.dl_speed.outputs.download-path }}
+          MEM_ARTIFACTS_DIR: ${{ steps.dl_mem.outputs.download-path }}
           CHECK_BODY_PATH: check_output.md
           CSV_RUNTIME_PATH: runtime_fps.csv
           CSV_COMPILE_PATH: compile_time.csv
+          CSV_MEM_PATH: mem.csv
           EXIT_CODE_REGRESSION: 42
           EXIT_CODE_ALERT: 43
         run: |
