--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -79,7 +79,10 @@ jobs:
         if: github.event_name == 'pull_request'
         shell: srun ${SRUN_COMMON} bash -e {0}
         run: |
-          UPGRADE_WHEEL=1 ADD_OMNI=1 ADD_USD=1 bash .github/workflows/scripts/production_build.sh
+          export UPGRADE_WHEEL=1
+          export ADD_OMNI=1
+          export ADD_USD=1
+          bash .github/workflows/scripts/production_build.sh
 
       - name: Run benchmarks
         if: github.event_name == 'pull_request'
@@ -159,18 +162,17 @@ jobs:
           echo "SRUN_COMMON=${SRUN_COMMON}" >> "$GITHUB_ENV"
 
       - name: Build
+        shell: srun ${SRUN_COMMON} bash -e {0}
         run: |
-          srun ${SRUN_COMMON} \
-               bash .github/workflows/scripts/production_build.sh
+          bash .github/workflows/scripts/production_build.sh
 
       - name: Run benchmarks
+        shell: srun ${SRUN_COMMON} bash -e {0}
         run: |
-          srun ${SRUN_COMMON} bash -e -s <<'EOF'
-            source /venv/bin/activate
-            pytest --mem-monitoring-filepath "/mnt/data/artifacts/mem_test_${SLURM_JOB_NAME}.csv" \
-                   --print -x -m "benchmarks" ./tests
-            cat speed_test*.txt > "/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt"
-          EOF
+          source /venv/bin/activate
+          pytest --mem-monitoring-filepath "/mnt/data/artifacts/mem_test_${SLURM_JOB_NAME}.csv" \
+                  --print -x -m "benchmarks" ./tests
+          cat speed_test*.txt > "/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt"
 
       - name: Kill srun job systematically
         if: always()
